<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".CartPage">

    <TextView
        android:id="@+id/createcart"
        android:layout_width="414dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/createcart"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="68dp"
        android:background="@color/grey"
        android:onClick="goBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_button"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/block2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createcart"
        app:srcCompat="@drawable/ic_block2" />

    <ImageView
        android:id="@+id/picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/block2"
        app:layout_constraintStart_toStartOf="@+id/block2"
        app:layout_constraintTop_toTopOf="@+id/block2"
        app:srcCompat="@drawable/canon_eos_r_body3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/canon"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/block2"
        app:layout_constraintStart_toStartOf="@+id/block2"
        app:layout_constraintTop_toBottomOf="@+id/picture" />

    <TextView
        android:id="@+id/getproduct"
        android:layout_width="215dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:gravity="left|center_vertical"
        android:text="@string/getproduct"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/block2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/returnproduct"
        android:layout_width="215dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:gravity="left|center_vertical"
        android:text="@string/returnproduct"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/block2"
        app:layout_constraintTop_toBottomOf="@+id/getproduct" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/getproduct"
        app:layout_constraintStart_toEndOf="@+id/getproduct"
        app:layout_constraintTop_toTopOf="@+id/getproduct"
        app:srcCompat="@drawable/ic_rectangle1" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/returnproduct"
        app:layout_constraintStart_toEndOf="@+id/returnproduct"
        app:layout_constraintTop_toTopOf="@+id/returnproduct"
        app:srcCompat="@drawable/ic_rectangle1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="195dp"
        android:layout_height="80dp"
        android:text="@string/value"
        android:fontFamily="@font/roboto"
        android:gravity="left|center_vertical"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/block2"
        app:layout_constraintTop_toBottomOf="@+id/block2" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/block2"
        app:srcCompat="@drawable/ic_rectangle2" />

    <ImageButton
        android:id="@+id/payment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/ic_payment_button"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>